# mail-talk

./: .gitignore  CLAUDE.md  README.md  config.sample.json  mailtalk.spec  pyproject.toml  run_app.py
docs/: DEPLOY_RUNBOOK.md
src/mailtalk/: __init__.py  aggregate.py  cli.py  config.py  db.py  diagnostics.py  fake_outlook.py  main.py  models.py  notify.py  outlook_client.py  paths.py  reply.py  source.py  sync.py  triage.py
src/mailtalk/static/: index.html
tests/: conftest.py  test_aggregate.py  test_clean.py  test_config.py  test_db_and_fake.py  test_diagnostics.py  test_sync.py  test_triage.py
