[project]
name = "mailtalk"
version = "0.1.0"
description = "OutlookメールをチャットUIで表示し優先度4レーンに自動仕分けするローカルGUIアプリ"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110",
    "uvicorn>=0.29",
]

[project.optional-dependencies]
# Windows実機でのみインストール可能（macOS開発機では入れない）
windows = [
    "pywin32>=306",
]
# exeビルド用（B端末＝ビルド機でのみ使用）。
build = [
    "pyinstaller>=6.0",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
mailtalk = "mailtalk.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mailtalk"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
